@@ -1,3 +1,7 @@
+2006-11-13  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_event_server.c: Fix up some comments.
+	
 2006-11-11  Albert Chu  <chu11@llnl.gov>
 
 	* src/modules/metric/cerebro_metric_common.h,
